nginx-app-example/nginx-namespace.yml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "nginx-app-example",
    "labels": {
      "name": "nginx-app-example"
    }
  }
}
