nginx-app-example/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx-app-example
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
